=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.5
 - Fixed: [ 1942593 ] Relationship Chart nth Cousin Calculation Issue (canajun2eh)
 - Fixed: Temp Fix for Lightbox giving errors when Googlemaps not installed (windmillway)
 - Fixed: [ 1944250 ] placelist.php Level Issue On Language Change For Some Themes (canajun2eh)
 - Added: Add "Painting" and "Other" to supported sortable media types on Lightbox-Album page(windmillway)
 - Fixed [ 1941544 ] Yahrzeiten Block in IE7 gives an Error (opus27)
 - Added: Add "Painting" and "Other" to supported media types (canajun2eh)
 - Fixed: [ 1943975 ] uploadmedia.php : undefined index "folder1" (canajun2eh)
 - Fixed: [ 1941658 ] Account Approval Email not sent to Admin (fisharebest)
 - Fixed: Move "maternal-death" style to stylesheet (fisharebest)
 - Added: Highligh fathers who die before their child is born (fisharebest)
 - Added: Option to show estimated birth/death dates on indi lists (fisharebest)
 - Fixed [ 1939774 ] MyGedView Portal Menu Showing even for Non-Logged In Users (canajun2eh)
 - Fixed: wrong gedcom record updated when syncing email changes to gedcom (fisharebest)
 - [ 1921974 ] SVN2756 Wrong names in search list for several GEDCOMs (fisharebest)
 - Fixed: weak randomly-generated passwords (fisharebest)
 - Fixed Logout sometimes goes to PGV site in SourceForge (canajun2eh)

Version 4.1.4 2008-04-04
 - Added Login block changes to Logout block once user is logged in (canajun2eh)
 - Fixed Welcome page in IE: blocks on right side are all fixed height (canajun2eh)
 - Fixed [1924688] SVN 2755 V4.1.4 Incorrect display of Indi page with IE (fisharebest)
 - Fixed [1912085] Syntax Error in downloadbackup.php (fisharebest)
 - Fixed [1907585] RSS Error